--- a/src/components/ForecastWidget/currentDay.css
+++ b/src/components/ForecastWidget/currentDay.css
@@ -12,13 +12,13 @@
   min-height: 400px;
 }
 
-.currentDayImage img {
-  display: block;
+.currentDayImage div {
+  background-position: center;
+  background-size: cover;
   border-radius: 15px;
   width: 100%;
   height: 100%;
   min-height: 400px;
-  object-fit: fill;
 }
 
 .currentDayInfo {
@@ -29,7 +29,7 @@
   height: 100%;
   min-height: 400px;
   border-radius: 15px;
-  background-color: rgba(245, 245, 245, 0.2);
+  background-color: rgba(245, 245, 245, 0.3);
 }
 
 .currentDayInfoMain, 
